dark mode correction

--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -14,7 +14,7 @@ ul {
 }
 
 .content-section {
-  
+  background-color: rgb(48, 52, 58);
   padding: 10px 20px;
   border: 1px solid rgba(0,0,0,0.6);;
   border-radius: 3px;
